# BlueArchiveGM

./: package-lock.json  package.json
.github/workflows/: tauri-build.yml
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src/assets/: memorylobby.json  stickers.json
src/assets/json/constants/: idlist_constants.json
src/assets/json/id/: CharacterExcelTable.json  CurrencyExcel.json  EmblemExcel.json  EquipmentExcelTable.json  FurnitureExcelTable.json  IdCardBackgroundExcel.json  ItemExcelTable.json  MemoryLobbyExcel.json  StickerPageContentExcel.json
src/components/: Announcement.vue  BottomNavBar.vue  Sidebar.vue  TopNavBar.vue
src/router/: index.js
src/utils/: api.js
src/views/: About.vue  Account.vue  Character.vue  EmailCodeManager.vue  GameSetting.vue  GetEmailCode.vue  GetPlayer.vue  Give.vue  GiveAll.vue  Home.vue  IdList.vue  ItemList.vue  Mail.vue  MailManager.vue  SystemMail.vue
