[package]
name = "BlueArchiveGM"
version = "1.0.3"
description = "A BlueArchiveGM tool based on Baps API"
authors = ["KitanoSakura"]
license = "MIT"
repository = "https://github.com/PrimeStudentCouncil/BlueArchiveGM"
edition = "2021"
rust-version = "1.85.0"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# 编译优化
[profile.release]
codegen-units = 16
lto = "thin"
opt-level = "z"
debug = 0
strip = true
panic = "abort"
incremental = true

[build-dependencies]
tauri-build = { version = "2.0.5", features = [] }

[dependencies]
serde_json = { version = "1.0", default-features = false, features = ["std"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
log = { version = "0.4", default-features = false }
tauri = { version = "2.3.1", features = [] }
tauri-plugin-log = { version = "2.0.0-rc", default-features = false }

# Windows MSVC 特定优化
[target.x86_64-pc-windows-msvc]
rustflags = [
    "-C", "target-cpu=native",
    "-C", "link-arg=/LTCG",
    "-C", "link-arg=/OPT:REF",
    "-C", "link-arg=/OPT:ICF"
]